<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="10dp"
    >


    <EditText
        android:id="@+id/Nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/Nombre" />

    <EditText
        android:id="@+id/Apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/Nombre"
        android:hint="@string/Apellido"
        android:inputType="text" />

    <TextView
        android:id="@+id/sexo"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:ems="5"
        android:layout_below="@id/Apellido"
        android:inputType="textPersonName"
        android:layout_margin = "10dp"
        android:scrollHorizontally="true"

        android:text="@string/sexo" />

    <RadioButton
        android:id="@+id/botonhombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Apellido"
        android:layout_marginLeft="93dp"
        android:layout_toRightOf="@id/sexo"
        android:text="@string/hombre" />

    <RadioButton
        android:id="@+id/botonmujer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Apellido"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="0dp"
        android:layout_toRightOf="@id/botonhombre"
        android:text="@string/mujer" />

    <TextView
        android:id="@+id/fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha_de_nacimiento"
        android:focusable="false"
        android:layout_margin = "15dp"
        android:layout_below="@id/sexo"
         />

    <Button
        android:id="@+id/cambiar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sexo"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="13dp"
        android:layout_toEndOf="@id/fecha"
        android:layout_toRightOf="@id/fecha"
        android:text="@string/cambiar" />

    <Spinner
        android:id="@+id/spiEstudio"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:ems="20"
        android:layout_centerInParent="true"
        android:layout_below="@id/fecha"
        android:text="Grado de Escolaridad" />



    <Button
        android:id="@+id/siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spiEstudio"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/siguiente" />

</RelativeLayout>